---
source: e2e/tests/local_pac.rs
assertion_line: 19
expression: run_fun!(curl $pac_bind / proxy.pac).unwrap()

---
// This file is automatically generated.

function FindProxyForURL(url, host) {
  // extract port number from url
  var port_match = url.match(/:(\d{0,5})/);
  var port = port_match[1] ? Number(port_match[1]) : null;

  if (shExpMatch(host, "*baidu.com*")) return "PROXY 127.0.0.1:3000; DIRECT";
  // #baidu.com
  if (host === "cn.bing.com") return "PROXY 127.0.0.1:3000; DIRECT";

  return "DIRECT";
}
